# ga-in-tsp

./: .$UseCaseDiagram.drawio.bkp  CMakeLists.txt  ClassDiagram.drawio  GeneticAlgorithmForTSP.cpp  GeneticAlgorithmForTSP.h  README.md  UML - dokumentacja
OtherDocuments/Diagrams/: PJC.mdj
otherDocuments/UMLdiagrams/: .$ClassDiagram.drawio.bkp  UseCaseDiagram.drawio
src/: CMakeLists.txt  Manager.cpp  Manager.h  UnknownMazeCreationAlgorithmException.cpp  UnknownMazeCreationAlgorithmException.h  main.cpp
src/GeneticAlgorithm/: GeneticAlgorithm.cpp  GeneticAlgorithmForTSP.h
src/GeneticAlgorithm/Abstract/: Generation.h  Genome.h
src/Graph/: AccessForbiddenException.cpp  AccessForbiddenException.h  Connection.cpp  Connection.h  Coordinates.cpp  Coordinates.h  Graph.cpp  Graph.h  KruskalMaze.cpp  KruskalMaze.h  Maze2D.cpp  Maze2D.h  RandKruskalMaze.cpp  RandKruskalMaze.h  Vertex.cpp  Vertex.h  VertexDoesntExsistException.cpp  VertexDoesntExsistException.h  WrongFileException.cpp  WrongFileException.h
tst/: CMakeLists.txt  GraphTest.cpp  main.cpp
